# Mavhir

./: .dockerignore  .env.example  .gitignore  Dockerfile  License  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: chemical.py  health.py  predict.py
app/core/: config.py  exceptions.py  models.py
app/models/: fix_pickle.py  model_metadata.json  train_models.py
app/services/: chemical_processor.py  descriptor_calculator.py  predictor.py  pubchem_client.py
data/: README.md  create_example_data.py
data/examples/: example_compounds.sdf  test_compounds.csv
data/training/: ames_mutagenicity_training.csv  carcinogenicity_training.csv
docs/: API.md  model_info.md
tests/: test_services.py
